Closed Bug 718150 Opened 12 years ago Closed 12 years ago

Shadow layer Swap() implementations for images and canvas don't work correctly the first time

Categories

(Core :: Graphics, defect)

x86
macOS
defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla12

People

(Reporter: bzbarsky, Assigned: bzbarsky)

References

Details

Attachments

(1 file)

In particular, the first Swap() call has an invalid front surface (of course), but we end up not updating mBounds as a result.  That means that if there are no more Swap() calls we won't paint correctly.
Blocks: 598482
Attachment #588593 - Flags: review?(jones.chris.g) → review+
Summary: Shadow layer Swap() implementation for images and canvas don't work correctly the first time → Shadow layer Swap() implementations for images and canvas don't work correctly the first time
https://hg.mozilla.org/integration/mozilla-inbound/rev/da960aeaf4bf
Flags: in-testsuite+
Target Milestone: --- → mozilla12
https://hg.mozilla.org/mozilla-central/rev/da960aeaf4bf
Status: NEW → RESOLVED
Closed: 12 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.