Bug 718150.  Make sure to update our stored size on Swap() even if we didn't already have a front surface.  r=cjones